--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/day7/JavaApplication1/nbproject/private/
+/day7/JavaApplication1/build/
