--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ Temporary Items
 .apdisk
 /day7/JavaApplication1/nbproject/private/
 /day7/JavaApplication1/build/
+/day8/JavaApplication3/nbproject/private/
+/day8/JavaApplication3/build/
+/day8/JavaApplication3/dist/
