--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ Temporary Items
 /day8/JavaApplication3/nbproject/private/
 /day8/JavaApplication3/build/
 /day8/JavaApplication3/dist/
+/day9/JavaApplication4/nbproject/private/
+/day9/JavaApplication4/build/
