--- a/day9/JavaApplication4/android/app/src/main/AndroidManifest.xml
+++ b/day9/JavaApplication4/android/app/src/main/AndroidManifest.xml
@@ -4,12 +4,19 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/bc"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/bc"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="in.co.the_tinker_project1.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
