--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ Temporary Items
 /day9/JavaApplication4/nbproject/private/
 /day9/JavaApplication4/build/
 /day11/JavaApplication6/nbproject/private/
+/day11/codevita2017/nbproject/private/
+/day11/codevita2017/build/
